--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           rel="stylesheet"/>
     <script src="node_modules/leaflet/dist/leaflet.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Travel Planner App - mlakumlaku.id</title>
   </head>
   <body>
     <div id="root"></div>
